# mockito_declarative_server

./: Cargo.toml  LICENSE  README.org
src/: lib.rs
test/: basic.yml
test/basic/: strange
